fixed footer on small devices

--- a/style.css
+++ b/style.css
@@ -675,6 +675,12 @@ margin-top: 4em;
 }
 }
 
+@media (max-width: 29.0625em){
+  footer{
+    visibility: hidden;
+  }
+  }
+
 @media (max-width: 65rem) {
 
 
